RESOLVED FIXED40720
CSSStyleSelector won't compile if WCSS is enabled
https://bugs.webkit.org/show_bug.cgi?id=40720
Summary CSSStyleSelector won't compile if WCSS is enabled
George Wright
Reported 2010-06-16 10:43:40 PDT
SVN commit 60418 made setWapInputFormat() private but CSSStyleSelector.cpp calls it here: HTMLFormControlElement* element = static_cast<HTMLFormControlElement*>(m_element); Resulting in the following compile error: "../../../../WebCore/css/CSSStyleSelector.cpp", line 5386: Error: #265-D: function "WebCore::HTMLInputElement::setWapInputFormat" (declared at line 337 of "../../../../WebCore/html/HTMLInputElement.h") is inaccessible static_cast<HTMLInputElement*>(m_element)->setWapInputFormat(mask); ^
Attachments
Make setWapInputFormat() public again. (1.62 KB, patch)
2010-06-16 11:54 PDT, George Wright
no flags
George Wright
Comment 1 2010-06-16 11:54:04 PDT
Created attachment 58915 [details] Make setWapInputFormat() public again.
George Wright
Comment 2 2010-06-16 12:01:31 PDT
(In reply to comment #0) > SVN commit 60418 made setWapInputFormat() private but CSSStyleSelector.cpp calls it here: > > HTMLFormControlElement* element = static_cast<HTMLFormControlElement*>(m_element); Oops, I meant this line: static_cast<HTMLInputElement*>(m_element)->setWapInputFormat(mask);
WebKit Commit Bot
Comment 3 2010-06-19 05:32:14 PDT
Comment on attachment 58915 [details] Make setWapInputFormat() public again. Clearing flags on attachment: 58915 Committed r61482: <http://trac.webkit.org/changeset/61482>
WebKit Commit Bot
Comment 4 2010-06-19 05:32:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.