2010-06-19  George Wright  <gwright@rim.com>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=40720

        Make setWapInputFormat() public again as CSSStyleSelector.cpp calls this when WCSS is enabled.

        * html/HTMLInputElement.h:
        (WebCore::HTMLInputElement::data):

git-svn-id: svn://svn.chromium.org/blink/trunk@61482 bbb929c8-8fbe-4397-9dbb-9b2b20218538