third_party/WebKit/WebCore/html/HTMLInputElement.h
@@ -208,6 +208,10 @@ public:
     HTMLOptionElement* selectedOption() const;
 #endif
 
+#if ENABLE(WCSS)
+    void setWapInputFormat(String& mask);
+#endif
+
 protected:
     HTMLInputElement(const QualifiedName&, Document*, HTMLFormElement* = 0);
 
@@ -335,7 +339,6 @@ private:
 #endif
 
 #if ENABLE(WCSS)
-    void setWapInputFormat(String& mask);
     virtual InputElementData data() const { return m_data; }
 #endif
 
